force-app/main/default/objects/Control_Integracion__c/Control_Integracion__c.object-meta.xml
<CustomObject>
    <label>Control de Integracion</label>
    <nameField>
        <label>Nombre de Control de Integraciones</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Controles de Integraciones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>