force-app/main/default/objects/Control_Integracion__c/fields/Interfaz__c.field-meta.xml
<CustomField>
    <fullName>Interfaz__c</fullName>
    <label>Interfaz</label>
    <length>255</length>
    <type>Text</type>
</CustomField>