force-app/main/default/objects/Control_Integracion__c/fields/Metodo__c.field-meta.xml
<CustomField>
    <fullName>Metodo__c</fullName>
    <label>Metodo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>