force-app/main/default/objects/Control_Integracion__c/fields/Servicio__c.field-meta.xml
<CustomField>
    <fullName>Servicio__c</fullName>
    <label>Servicio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>